# ci-training-conan

./: conanfile.py
src/: ATest.cpp  CMakeLists.txt  CTest.cpp  DATETest.cpp  DTest.cpp
src/A/: A.cpp  A.h  CMakeLists.txt
src/A/B/: Ba.cpp  Ba.h  Bb.cpp  Bb.h  CMakeLists.txt
src/C/: C.cpp  C.h  CMakeLists.txt
src/D/: CMakeLists.txt  D.cpp  D.h
src/DATE/: BuildTime.h  BuildTime.h.in  CMakeLists.txt
src/H/: CMakeLists.txt  H.h  VersionInterface.h
test_package/: CMakeLists.txt  conanfile.py  example.cpp
